add IISI Cockpit V2 support